@@ -1565,7 +1565,8 @@ typedef struct __cob_file {
 	unsigned int		flag_do_qbl:1;		/* fileio: enable commit/rollback */
 	unsigned int		flag_do_jrn:1;		/* fileio: record updates to journal/audit trail */
 	unsigned int		flag_updt_file:1;	/* Allow this 'cob_file' to be updated */
-	unsigned int		unused_bits:7;
+	unsigned int		flag_is_std:1;		/* LINE SEQUENTIAL as 'stdin/stdout/stderr' */
+	unsigned int		unused_bits:6;
 
 	cob_field		*last_key;		/* Last field used as 'key' for I/O */
 	unsigned char		last_operation;		/* Most recent I/O operation */
